code readability,  enhanced switch, pattern variables, use of record, small performance updates